--- a/composer.json
+++ b/composer.json
@@ -1,24 +1,29 @@
 {
-  "name": "gento-arg/module-shipping",
-  "description": "Gento_Shipping magento 2 extension",
-  "require": {
-    "php": "~7.1.3||~7.2.0",
-    "magento/module-backend": "*",
-    "magento/module-config": "*",
-    "magento/module-ui": "*",
-    "magento/framework": "*.*"
-  },
-  "type": "magento2-module",
-  "license": [
-    "OSL-3.0",
-    "AFL-3.0"
-  ],
-  "autoload": {
-    "files": [
-      "registration.php"
+    "name": "gento-arg/module-shipping",
+    "description": "Gento_Shipping magento 2 extension",
+    "require": {
+        "php": "~7.1.3||~7.2.0",
+        "magento/module-backend": "*",
+        "magento/module-config": "*",
+        "magento/module-ui": "*",
+        "magento/framework": "*.*"
+    },
+    "type": "magento2-module",
+    "license": [
+        "OSL-3.0",
+        "AFL-3.0"
     ],
-    "psr-4": {
-      "Gento\\Shipping\\": ""
+    "autoload": {
+        "files": [
+            "registration.php"
+        ],
+        "psr-4": {
+            "Gento\\Shipping\\": ""
+        }
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^8.5",
+        "phpmd/phpmd": "^2.8",
+        "squizlabs/php_codesniffer": "^3.5"
     }
-  }
 }
