Add magento repo config

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ env:
     - TEST_SUITE=unit
 before_script:
   - composer install
+  - composer global config http-basic.repo.magento.com "$COMPOSER_MAGENTO_USER" "$COMPOSER_MAGENTO_PASSWORD"
 script:
   - mkdir -p build/logs
   - if [ $TEST_SUITE == "static" ]; then vendor/bin/phpcs .; fi
