--- a/composer.json
+++ b/composer.json
@@ -25,5 +25,11 @@
         "phpunit/phpunit": "^8.5",
         "phpmd/phpmd": "^2.8",
         "squizlabs/php_codesniffer": "^3.5"
-    }
+    },
+    "repositories": [
+        {
+            "type": "composer",
+            "url": "https://repo.magento.com/"
+        }
+    ]
 }
