--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "gento-arg/module-shipping",
     "description": "Gento_Shipping magento 2 extension",
     "require": {
-        "php": "~7.1.3||~7.2.0",
+        "php": ">=7.2",
         "magento/module-backend": "*",
         "magento/module-config": "*",
         "magento/module-ui": "*",
